Improvement on Exception Handling, Liquibase, H2 integration, testcase